kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: personal-blog-service
spec:
  selector:
    app: personal-blog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
