kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-blog-ingress
spec:
  rules:
    - host: www.niklas-bauer.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: personal-blog-service
                port:
                  number: 80
    - host: niklas-bauer.dev
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: personal-blog-service
                port:
                  number: 80
